--- a/docker/sandbox/docker-compose.yml
+++ b/docker/sandbox/docker-compose.yml
@@ -13,31 +13,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-class toolchain::puppet-modules {
+version: '2'
 
-  exec { 'install-puppet-stdlib':
-    path    => '/usr/bin:/bin',
-    command => 'puppet module install puppetlabs-stdlib',
-    creates => '/etc/puppet/modules/stdlib',
-  }
-
-  case $operatingsystem{
-    /Ubuntu|Debian/: {
-      if versioncmp($::puppetversion, '4') < 0 {
-        $version = '--version 2.4.0'
-      } else {
-        $version = ''
-      }
-      exec { 'install-puppet-apt':
-        path    => '/usr/bin:/bin',
-        command => "puppet module install puppetlabs-apt ${version}",
-        creates => '/etc/puppet/modules/apt',
-      }
-    }
-  }
-
-  stage { 'first':
-    before => Stage['main'],
-  }
-  class { 'toolchain::puppet-modules-prereq': stage => 'first' }
-}
+services:
+  sandbox:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: ${ACCOUNT}/sandbox:${TAG}
