--- a/provisioner/docker/config.yaml
+++ b/provisioner/docker/config.yaml
@@ -1,6 +1,6 @@
 docker:
         memory_limit: "4g"
-        image: "bigtop/puppet:centos-7"
+        image: "vslovik/puppet:centos-7" // "bigtop/puppet:centos-7"
 
 repo: "http://bigtop-repos.s3.amazonaws.com/releases/1.2.0/centos/7/x86_64"
 distro: centos
