--- a/docker/pseudo-cluster/Dockerfile
+++ b/docker/pseudo-cluster/Dockerfile
@@ -12,17 +12,17 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM vslovik/deploy:ubuntu-16.04
+FROM vslovik/puppet:ubuntu-16.04
 MAINTAINER vslovik@gmail.com
 
 WORKDIR /tmp/vslovik
 COPY deploy/puppet deploy/puppet
 COPY deploy/puppet/hieradata /etc/puppet/hieradata
 RUN  cp deploy/puppet/hiera.yaml /etc/puppet
-COPY docker/pseudo-cluster/config pseudo-cluster
+COPY config pseudo-cluster
 RUN cp -r pseudo-cluster/* /etc/puppet
 
-RUN puppet apply -d --modulepath=/tmp/vslovik/deploy/puppet/modules:/etc/puppet/modules /tmp/vslovik/deploy/puppet/manifests/site.pp
+RUN puppet apply -d --modulepath=/tmp/vslovik/deploy/puppet/modules:/etc/puppet/modules /tmp/vslovik/deploy/puppet/manifests
 
 RUN apt-get -y install hadoop-hdfs-namenode hadoop-yarn-resourcemanager \
  hadoop-doc hadoop-client hadoop-yarn-proxyserver \
