--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,29 @@
+buildscript {
+    repositories { jcenter() }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
+    }
+}
+
+plugins {
+    id 'com.github.johnrengelman.shadow' version '1.2.3'
+}
+
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-apply plugin: 'scala'
+apply plugin: "java"
+apply plugin: "idea"
+apply plugin: "scala"
+
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://repo.hortonworks.com/content/repositories/releases/"
+    }
 }
 
 sourceSets {
@@ -20,22 +36,46 @@ sourceSets {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.apache.hadoop:hadoop-mapreduce-client-core:2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-common', version:'2.8.2'
+    compile group: 'org.apache.hadoop', name: 'hadoop-common', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-hdfs', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-yarn-common', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-minicluster', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version:'2.8.2'
+    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-jobclient', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-app', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-shuffle', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-common', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-client', version: '2.8.2'
     compile group: 'org.la4j', name: 'la4j', version: '0.6.0'
-    compile 'org.scala-lang:scala-library:2.11.8'
+    compile 'org.scala-lang:scala-library:2.12.4'
     compile group: 'org.scalacheck', name: 'scalacheck_2.11', version: '1.12.5'
     testCompile 'org.scalatest:scalatest_2.11:3.0.1'
     testRuntime 'org.pegdown:pegdown:1.4.2'
 }
+
+task listJars << {
+    configurations.shadow.each { println it.name }
+}
+
+def copyDependencyJarsForHadoopCluster() {
+    copy {
+        from configurations.hadoopClusterRuntime
+        into 'build/libs'
+    }
+}
+
+build {
+    doLast {
+        copyDependencyJarsForHadoopCluster()
+    }
+}
+
+
+shadowJar {
+    exclude 'META-INF/LICENSE'
+}
+
+
 
 
 
