--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,21 @@ repositories {
 
 sourceSets {
     main {
-        java.srcDirs = [];
-        scala.srcDirs = ["src/main/scala", "src/main/java"]
+        scala.srcDirs = ["src/main/scala"]
+    }
+//    test {
+//        scala.srcDirs = ["src/test/scala"]
+//    }
+
+}
+
+tasks.withType(Test) {
+    testLogging {
+        // Uncomment this if you want to see the console output from the tests.
+        showStandardStreams = true
+        events "passed", "skipped", "failed"
+        // show standard out and standard error of the test JVM(s) on the console
+        showStandardStreams = true
     }
 }
 
@@ -47,36 +60,19 @@ dependencies {
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-common', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-client', version: '2.8.2'
     compile group: 'org.la4j', name: 'la4j', version: '0.6.0'
-    compile 'org.scala-lang:scala-library:2.12.4'
+    compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.4'
     compile group: 'org.scalacheck', name: 'scalacheck_2.12', version: '1.13.4'
-    testCompile 'org.scalatest:scalatest_2.11:3.0.1'
-    testRuntime 'org.pegdown:pegdown:1.4.2'
-}
-
-task listJars << {
-    configurations.shadow.each { println it.name }
-}
-
-def copyDependencyJarsForHadoopCluster() {
-    copy {
-        from configurations.hadoopClusterRuntime
-        into 'build/libs'
-    }
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    testCompile group: 'org.scalactic', name: 'scalactic_2.12', version: '3.0.4'
+    testCompile group: 'org.scalatest', name: 'scalatest_2.12', version: '3.0.4'
 }
 
 build {
     doLast {
-        copyDependencyJarsForHadoopCluster()
+        configurations.shadow.each { println it.name }
     }
 }
-
 
 shadowJar {
     exclude 'META-INF/LICENSE'
 }
-
-
-
-
-
-
