--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 buildscript {
-    repositories { jcenter() }
+    repositories {
+        jcenter()
+        mavenCentral()
+        // The following is only necessary if you want to use SNAPSHOT releases.
+        // maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    }
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
     }
 }
 
@@ -13,11 +19,7 @@ version '1.0-SNAPSHOT'
 
 apply plugin: "java"
 apply plugin: "idea"
-apply plugin: "scala"
-
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 repositories {
     mavenCentral()
@@ -29,11 +31,9 @@ repositories {
 sourceSets {
     main {
         java.srcDirs = ["src/main/java"]
-        scala.srcDirs = ["src/main/scala"]
     }
     test {
         java.srcDirs = ["src/test/java"]
-        scala.srcDirs = ["src/test/scala"]
     }
 
 }
@@ -61,13 +61,13 @@ dependencies {
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-shuffle', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-common', version: '2.8.2'
     compile group: 'org.apache.hadoop', name: 'hadoop-client', version: '2.8.2'
-    compile group: 'org.la4j', name: 'la4j', version: '0.6.0'
-    compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.4'
-    compile group: 'org.scalacheck', name: 'scalacheck_2.12', version: '1.13.4'
-    compile group: 'com.chuusai', name: 'shapeless_2.12', version: '2.3.2'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    testCompile group: 'org.scalactic', name: 'scalactic_2.12', version: '3.0.4'
-    testCompile group: 'org.scalatest', name: 'scalatest_2.12', version: '3.0.4'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
+    // to run JUnit 3/4 tests:
+    testImplementation("junit:junit:4.12")
+    testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
+
 }
 
 build {
