--- a/build.gradle
+++ b/build.gradle
@@ -49,25 +49,24 @@ tasks.withType(Test) {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.apache.hadoop:hadoop-mapreduce-client-core:2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-common', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-hdfs', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-yarn-common', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-minicluster', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-jobclient', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-app', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-shuffle', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-common', version: '2.8.2'
-    compile group: 'org.apache.hadoop', name: 'hadoop-client', version: '2.8.2'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
+    compile 'org.apache.hadoop:hadoop-common:2.8.2'
+    compile 'org.apache.hadoop:hadoop-hdfs:2.8.2'
+    compile 'org.apache.hadoop:hadoop-yarn-common:2.8.2'
+    compile 'org.apache.hadoop:hadoop-minicluster:2.8.2'
+    compile 'org.apache.hadoop:hadoop-mapreduce-client-core:2.8.2'
+    compile 'org.apache.hadoop:hadoop-mapreduce-client-jobclient:2.8.2'
+    compile 'org.apache.hadoop:hadoop-mapreduce-client-app:2.8.2'
+    compile 'org.apache.hadoop:hadoop-mapreduce-client-shuffle:2.8.2'
+    compile 'org.apache.hadoop:hadoop-mapreduce-client-common:2.8.2'
+    compile 'org.apache.hadoop:hadoop-client:2.8.2'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-coren:2.7.22'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.0.0"
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
     // to run JUnit 3/4 tests:
     testImplementation("junit:junit:4.12")
     testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
-
 }
 
 build {
